# cpp

./: .gitignore  CMakeLists.txt  README.md  basic tasks (first seminar).cpp
BinaryTree/: CMakeLists.txt
BinaryTree/include/: BinaryTree.h  BinaryTree.hpp
BinaryTree/test/: BinaryTreeTest.cpp
CyclicQueue/: CMakeLists.txt
CyclicQueue/include/: CyclicQueue.h
CyclicQueue/src/: CyclicQueue.cpp
CyclicQueue/test/: CyclicQueueTest.cpp
Point/: CMakeLists.txt
Point/include/: Point.h
Point/src/: Point.cpp
Point/test/: PointTest.cpp
PointArray/: CMakeLists.txt
PointArray/include/: PointArray.h
PointArray/src/: PointArray.cpp
PointArray/test/: PointArrayTest.cpp
Timer/: CMakeLists.txt
Timer/include/: Timer.h  Timer.hpp
Timer/src/: Timer.cpp
cmake/: Core.cmake  DownloadProject.cmake
sem1/: CMakeLists.txt
sem1/src/: exceptions.cpp  functions.cpp  helloworld.cpp  input.cpp  ruhelloworld.cpp  statements.cpp  variables.cpp
sem2/: CMakeLists.txt
sem2/src/: arrays.cpp  classes.cpp  enum.cpp  inheritance.cpp  operators.cpp  pointers.cpp  rule_of_five.cpp  struct.cpp
sem3/: CMakeLists.txt
sem3/src/: files.cpp  formatting.cpp  strings.cpp
sem4/: CMakeLists.txt
sem4/src/: template_classes.cpp  template_compile_time.cpp  template_functions.cpp
sem5/: CMakeLists.txt
sem5/src/: bitwise_operations.cpp  bitwiseop_examples.cpp
sem6/: CMakeLists.txt
sem6/src/: algorithms.cpp  iterators.cpp
sem8/: CMakeLists.txt
sem8/src/: binary_files.cpp
task1/: CMakeLists.txt
task1/src/: main.cpp  (+6 more)
task2/: CMakeLists.txt
task3/: CMakeLists.txt  Task3.md
task4/: CMakeLists.txt
(+42 files in other folders)
